traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: not found: value cp
  cp = 0
  ^TraversalByColumn:2: error: not found: value cp
  ecritMessage(cp)
               ^TraversalByColumn:7: error: not found: value cp
        cp += 1
        ^TraversalByColumn:8: error: not found: value cp
        ecritMessage(cp)
                     ^